perbaikan proses update menggunakan Task