@@ -2,25 +2,21 @@ package launcher;
 
 import javafx.application.Application;
 import javafx.application.Platform;
+import javafx.concurrent.Task;
 import javafx.geometry.Pos;
 import javafx.geometry.Rectangle2D;
 import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Label;
-import javafx.scene.control.TextArea;
 import javafx.scene.image.Image;
 import javafx.scene.layout.VBox;
 import javafx.stage.Screen;
 import javafx.stage.Stage;
 import javafx.stage.StageStyle;
-import javafx.util.Duration;
-import javafx.animation.PauseTransition;
 
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
-import java.io.PrintWriter;
-import java.io.StringWriter;
 import java.lang.reflect.Method;
 
 import java.net.URL;
@@ -28,226 +24,245 @@ import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Objects;
 import java.util.Properties;
 
-public final class Launcher extends Application {
 
-	private static URLClassLoader appClassLoader;
+public class Launcher extends Application {
 
-	@Override
-	public final void start(Stage splashStage) {
+    private URLClassLoader appClassLoader;
 
-		// Simple Splash Screen UI
-		Label title = new Label("JFX Point of Sales");
-		title.setStyle("-fx-font-size: 32px; -fx-font-weight: bold; -fx-text-fill: white;");
-		Label status = new Label("Loading classes...");
-		status.setStyle("-fx-font-size: 14px; -fx-text-fill: #ccc;");
+    @Override
+    public void start(Stage splashStage) {
+        SplashView splash = createSplash(splashStage);
 
-		VBox root = new VBox(20, title, status);
-		root.setAlignment(Pos.CENTER);
-		root.setStyle("-fx-background-color: #2c3e50; -fx-padding: 40px; -fx-background-radius: 10;");
+        Task<Class<?>> loadTask = createLoadTask();
 
-		Scene scene = new Scene(root, 400, 250);
-		scene.setFill(null); // Transparent scene background
+        // bind status text → otomatis update (mirip state di JS)
+        splash.status.textProperty().bind(loadTask.messageProperty());
 
-		splashStage.initStyle(StageStyle.TRANSPARENT);
-		splashStage.setWidth(400);
-		splashStage.setHeight(250);
-		splashStage.setScene(scene);
-		splashStage.setAlwaysOnTop(true);
-		splashStage.getIcons().add(
-				new Image(getClass().getResourceAsStream("/bag.png")));
-		splashStage.show();
+        loadTask.setOnSucceeded(e -> {
+            try {
+                startMainApp(loadTask.getValue(), splashStage, splash.root);
+            } catch (Exception ex) {
+                showErrorAndExit(ex, splashStage);
+            }
+        });
 
-		Platform.runLater(() -> {
-			Rectangle2D bounds = Screen.getPrimary().getVisualBounds();
-			splashStage.setX((bounds.getWidth() - splashStage.getWidth()) / 2);
-			splashStage.setY((bounds.getHeight() - splashStage.getHeight()) / 2);
-		});
+        loadTask.setOnFailed(e -> showErrorAndExit(loadTask.getException(), splashStage));
 
-		// Background loading task
-		new Thread(() -> {
-			try {
-				Platform.runLater(() -> status.setText("Loading JFXPOS App..."));
-				// Thread.sleep(3000); // Simulate some process delay for visibility
+        // start async (pakai virtual thread Java 21)
+        Thread.startVirtualThread(loadTask);
+    }
 
-				Updater.update(status);
+    // =========================
+    // SPLASH UI
+    // =========================
+    private SplashView createSplash(Stage stage) {
+        Label title = new Label("JFX Point of Sales");
+        title.setStyle("-fx-font-size: 32px; -fx-font-weight: bold; -fx-text-fill: white;");
 
-				Path jarPath = getJarPath();
+        Label status = new Label("Initializing...");
+        status.setStyle("-fx-font-size: 14px; -fx-text-fill: #ccc;");
 
-				URL[] urls = { jarPath.toUri().toURL() };
+        VBox root = new VBox(20, title, status);
+        root.setAlignment(Pos.CENTER);
+        root.setStyle("-fx-background-color: #2c3e50; -fx-padding: 40px; -fx-background-radius: 10;");
 
-				// Use current class loader as parent to ensure JavaFX classes are found
-				appClassLoader = new URLClassLoader(urls, Launcher.class.getClassLoader());
-				Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-					try {
-						if (appClassLoader != null) {
-							System.out.println("Closing appClassLoader...");
-							appClassLoader.close();
-						}
-					} catch (Exception e) {
-						e.printStackTrace();
-					}
-				}));
+        Scene scene = new Scene(root, 400, 250);
+        scene.setFill(null);
 
-				Class<?> appClass = appClassLoader.loadClass("jfxpos.App");
+        stage.initStyle(StageStyle.TRANSPARENT);
+        stage.setScene(scene);
+        stage.setAlwaysOnTop(true);
+        stage.getIcons().add(new Image(Objects.requireNonNull(getClass().getResourceAsStream("/bag.png"))));
 
-				// Panggil metode static readConfiguration via refleksi
-				Platform.runLater(() -> status.setText("Reading configuration files..."));
-				Method configMethod = appClass.getMethod("readConfiguration");
-				configMethod.invoke(null); // 'null' karena metodenya static
+        centerStage(stage);
+        stage.show();
 
-				// // Since App is also a JavaFX Application, we'll instantiate it
-				// // and call its start method on a new Stage
-				Platform.runLater(() -> {
+        return new SplashView(root, status);
+    }
 
-					Stage primaryStage = new Stage();
+    private void centerStage(Stage stage) {
+        Rectangle2D bounds = Screen.getPrimary().getVisualBounds();
+        stage.setX((bounds.getWidth() - 400) / 2);
+        stage.setY((bounds.getHeight() - 250) / 2);
+    }
 
-					try {
-						Object appInstance = appClass.getDeclaredConstructor().newInstance();
-						Method startMethod = appClass.getMethod("start", Stage.class);
+    // =========================
+    // BACKGROUND TASK (ASYNC FLOW)
+    // =========================
+    private Task<Class<?>> createLoadTask() {
+        return new Task<>() {
+            @Override
+            protected Class<?> call() throws Exception {
 
-						// 1. Jalankan aplikasi utama
-						status.setText("Starting JFX Point of Sales ...");
-						System.out.println("Starting Main Applicaton");
-						startMethod.invoke(appInstance, primaryStage);
+                updateMessage("Loading updater...");
+                Updater.update(this::updateMessage);
 
-						primaryStage.getIcons().add(
-								new Image(getClass().getResourceAsStream("/bag.png")));
+//                runUpdaterSafe(this);
 
-						primaryStage.setAlwaysOnTop(true);
-						primaryStage.setAlwaysOnTop(false);
+                updateMessage("Preparing classloader...");
+                Path jarPath = getJarPath();
+                URL[] urls = { jarPath.toUri().toURL() };
 
-						closeSplashScreen(root, splashStage, primaryStage);
+                appClassLoader = new URLClassLoader(urls, Launcher.class.getClassLoader());
+                registerShutdownHook();
 
-					} catch (Exception e) {
-						status.setText("Load failed: " + e.getMessage());
+                updateMessage("Loading application class...");
+                Class<?> appClass = appClassLoader.loadClass("jfxpos.App");
 
-						splashStage.setAlwaysOnTop(false);
-						if (primaryStage.isShowing()) {
-							primaryStage.close();
-						}
+                updateMessage("Reading configuration...");
+                Method configMethod = appClass.getMethod("readConfiguration");
+                configMethod.invoke(null);
 
-						Alert alert = createAlert(e);
-						closeSplashScreen(root, splashStage, primaryStage);
-						alert.showAndWait(); // MODAL
+                updateMessage("Starting application...");
+                return appClass;
+            }
+        };
+    }
 
-					}
-				});
+//    private void runUpdaterSafe(Task<?> task) {
+//        try {
+//            // ⚠️ pastikan Updater tidak update UI langsung!
+//            Updater.update(task::updateMessage);
+////            Updater.update(msg -> {
+////                // kalau kamu ubah Updater jadi callback-based
+////                Platform.runLater(() -> {
+////                    // optional logging / debug
+////                    System.out.println(msg);
+////                });
+////            });
+//        } catch (Exception e) {
+//            throw new RuntimeException("Updater failed", e);
+//        }
+//    }
 
-			} catch (Exception e) {
-				e.printStackTrace();
-				Platform.runLater(() -> {
-					splashStage.setAlwaysOnTop(false);
-					Alert alert = createAlert(e);
-					alert.showAndWait();
-					splashStage.close();
-				});
-			}
-		}).start();
-	}
+    private void registerShutdownHook() {
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            try {
+                if (appClassLoader != null) {
+                    System.out.println("Closing classloader...");
+                    appClassLoader.close();
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }));
+    }
 
-	public static void main(String[] args) {
-		launch(args);
-	}
+    // =========================
+    // START MAIN APP
+    // =========================
+    private void startMainApp(Class<?> appClass, Stage splashStage, VBox splashRoot) throws Exception {
 
-	public static Alert createAlert(Exception e) {
-		Alert alert = new Alert(Alert.AlertType.ERROR);
-		alert.setTitle("Error");
-		alert.setHeaderText("Load Failed!");
+        Stage primaryStage = new Stage();
 
-		String errorMessage = e.getMessage();
-		if (errorMessage == null) {
-			alert.setContentText(e.toString());
-		} else {
-			alert.setContentText(e.getMessage());
-		}
+        Object appInstance = appClass.getDeclaredConstructor().newInstance();
+        Method startMethod = appClass.getMethod("start", Stage.class);
 
-		StringWriter sw = new StringWriter();
-		PrintWriter pw = new PrintWriter(sw);
-		e.printStackTrace(pw);
+        startMethod.invoke(appInstance, primaryStage);
 
-		TextArea textArea = new TextArea(sw.toString());
-		textArea.setEditable(false);
-		textArea.setWrapText(true);
+        primaryStage.getIcons().add(new Image(Objects.requireNonNull(getClass().getResourceAsStream("/bag.png"))));
 
-		alert.getDialogPane().setExpandableContent(textArea);
+        primaryStage.toFront();
+        primaryStage.requestFocus();
 
-		return alert;
-	}
+        closeSplash(splashRoot, splashStage, primaryStage);
+    }
 
-	public static void closeSplashScreen(VBox root, Stage splashStage, Stage primaryStage) {
-		// Buat Efek Fade Out untuk Splash Screen
-		javafx.animation.FadeTransition fadeOut = new javafx.animation.FadeTransition(
-				Duration.millis(1000), root);
-		fadeOut.setFromValue(1.0);
-		fadeOut.setToValue(0.0);
+    // =========================
+    // ERROR HANDLING
+    // =========================
+    private void showErrorAndExit(Throwable e, Stage splashStage) {
+        e.printStackTrace();
 
-		// 3. Setelah animasi selesai, baru tutup splashStage
-		fadeOut.setOnFinished(event -> {
-			splashStage.close();
-			if (primaryStage.isShowing()) {
-				primaryStage.setAlwaysOnTop(false);
-				primaryStage.toFront(); // Angkat window utama ke depan
-				primaryStage.requestFocus();
-			}
-		});
+        splashStage.setAlwaysOnTop(false);
 
-		// tutup splash screen
-		PauseTransition delay = new PauseTransition(Duration.seconds(1));
-		delay.setOnFinished(evt -> fadeOut.play());
-		delay.play();
-	}
+        Alert alert = createAlert(e);
+        alert.showAndWait();
 
-	public static Path getJarPath() throws IOException {
-		Path jarPath;
+        Platform.exit();
+    }
 
-		Path basePath = Paths.get(System.getProperty("user.dir"));
-		Path jfxposCfg = basePath.resolve("app/jfxpos.cfg");
-		Path jfxposJar = basePath.resolve("app/jfxpos.jar");
-		Path ideJar = Paths.get("build/libs/jfxpos.jar").toAbsolutePath();
+    // =========================
+    // UTIL
+    // =========================
+    private static class SplashView {
+        VBox root;
+        Label status;
 
-		if (Files.exists(jfxposCfg)) {
-			// baca dulu dari konfigurasi file
-			String fileName = getJfxposFile(jfxposCfg);
-			jarPath = basePath.resolve("app/" + fileName);
-			if (!Files.exists(jarPath)) {
-				throw new RuntimeException("Tidak menemukan '" + jarPath.toString() + "'!");
-			}
-		} else if (Files.exists(jfxposJar)) {
-			jarPath = jfxposJar;
-		} else if (Files.exists(ideJar)) {
-			jarPath = ideJar;
-		} else {
-			throw new RuntimeException("Tidak menemukan 'jfxpos.jar'!  basePath: " + basePath);
-		}
+        SplashView(VBox root, Label status) {
+            this.root = root;
+            this.status = status;
+        }
+    }
 
-		return jarPath;
-	}
+    // Dummy placeholders (pakai implementasi kamu)
+    private Path getJarPath() throws IOException {
+        Path jarPath;
 
-	public static String getJfxposFile(Path cfgFilePath) throws IOException {
-		Properties props = new Properties();
+        Path basePath = Paths.get(System.getProperty("user.dir"));
+        Path jfxposCfg = basePath.resolve("app/jfxpos.cfg");
+        Path jfxposJar = basePath.resolve("app/jfxpos.jar");
+        Path ideJar = Paths.get("build/libs/jfxpos.jar").toAbsolutePath();
 
-		try (BufferedReader reader = new BufferedReader(new FileReader(cfgFilePath.toFile()))) {
-			String line;
-			while ((line = reader.readLine()) != null) {
-				line = line.trim();
-				// skip empty line atau komentar
-				if (line.isEmpty() || line.startsWith("#") || line.startsWith(";") || line.startsWith("["))
-					continue;
+        if (Files.exists(jfxposCfg)) {
+            // baca dulu dari konfigurasi file
+            String fileName = getJfxposFile(jfxposCfg);
+            jarPath = basePath.resolve("app/" + fileName);
+            if (!Files.exists(jarPath)) {
+                throw new RuntimeException("Tidak menemukan '" + jarPath + "'!");
+            }
+        } else if (Files.exists(jfxposJar)) {
+            jarPath = jfxposJar;
+        } else if (Files.exists(ideJar)) {
+            jarPath = ideJar;
+        } else {
+            throw new RuntimeException("Tidak menemukan 'jfxpos.jar'!  basePath: " + basePath);
+        }
 
-				// split key=value
-				int idx = line.indexOf('=');
-				if (idx > 0) {
-					String key = line.substring(0, idx).trim();
-					String value = line.substring(idx + 1).trim();
-					props.setProperty(key, value);
-				}
-			}
-		}
+        return jarPath;
+    }
 
-		// ambil nilai jfxpos
-		String jfxpos = props.getProperty("jfxpos", "jfxpos.jar");
-		return jfxpos;
-	}
+    public static String getJfxposFile(Path cfgFilePath) throws IOException {
+        Properties props = new Properties();
+
+        try (BufferedReader reader = new BufferedReader(new FileReader(cfgFilePath.toFile()))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                line = line.trim();
+                // skip empty line atau komentar
+                if (line.isEmpty() || line.startsWith("#") || line.startsWith(";") || line.startsWith("["))
+                    continue;
+
+                // split key=value
+                int idx = line.indexOf('=');
+                if (idx > 0) {
+                    String key = line.substring(0, idx).trim();
+                    String value = line.substring(idx + 1).trim();
+                    props.setProperty(key, value);
+                }
+            }
+        }
+
+        // ambil nilai jfxpos
+        String jfxpos;
+        jfxpos = props.getProperty("jfxpos", "jfxpos.jar");
+        return jfxpos;
+    }
+
+
+
+    private void closeSplash(VBox root, Stage splash, Stage main) {
+        splash.close();
+        main.show();
+    }
+
+    private Alert createAlert(Throwable e) {
+        Alert alert = new Alert(Alert.AlertType.ERROR);
+        alert.setHeaderText("Error");
+        alert.setContentText(e.getMessage());
+        return alert;
+    }
 }
